
- GPR#1667: add command-line options -no-propt, -no-version, -no-time,
  -no-breakpoint and -topdirs-path to ocamldebug
  (Sébastien Hinderer, review by Damien Doligez)

- GPR#1537: boot/ocamldep is no longer included in the source distribution;
  boot/ocamlc -depend can be used in its place.
  (Nicolás Ojeda Bär, review by Xavier Leroy and Damien Doligez)

### Manual and documentation:

- MPR#7613: minor reword of the "refutation cases" paragraph
  (Florian Angeletti, review by Jacques Garrigue)

- PR#7647, GPR#1384: emphasize ocaml.org website and forum in README
  (Yawar Amin, review by Gabriel Scherer)

- GPR#1540: manual, decouple verbatim and toplevel style in code examples
  (Florian Angeletti, review by Gabriel Scherer)

- PR#7698, GPR#1545: improve wording in OCaml manual in several places,
  mostly in Chapter 1.  This addresses the easier changes suggested in the PR.
  (Jim Fehrle, review by Florian Angeletti and David Allsopp)

- GPR#1556: manual, add a consistency test for manual references inside
  the compiler source code.
  (Florian Angeletti, review by Gabriel Scherer)

- GPR#1647: manual, subsection on record and variant disambiguation
  (Florian Angeletti, review by Alain Frisch and Gabriel Scherer)

### Compiler distribution build system

- MPR#5219, GPR#1680: use 'install' instead of 'cp' in install scripts
  (Gabriel Scherer, review by Sébastien Hinderer)

- MPR#7679: make sure .a files are erased before calling ar rc, otherwise
  leftover .a files from an earlier compilation may contain unwanted modules
  (Xavier Leroy)

- GPR#1571: do not perform architecture tests on 32-bit platforms, allowing
  64-bit back-ends to use 64-bit specific constructs
  (Xavier Clerc, review by Damien Doligez)

### Internal/compiler-libs changes:

- GPR#1488, GPR#1560: Refreshing parmatch
  (Gabriel Scherer and Thomas Refis, review by Luc Maranget)

- GPR#1502: more command line options for expect tests
  (Florian Angeletti, review by Gabriel Scherer)
